[package]
name = "neon-project"
version = "0.1.0"
authors = ["Brian Grinstead <briangrinstead@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "neon_project"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.14"

[dependencies]
neon = "0.1.14"
mentat = { git = "https://github.com/mozilla/mentat", rev = "bffefe7e6bcb0b5580979a8a782f0a97185f649a"}
mentat_db = { git = "https://github.com/mozilla/mentat", rev = "bffefe7e6bcb0b5580979a8a782f0a97185f649a" }
mentat_core = { git = "https://github.com/mozilla/mentat", rev = "bffefe7e6bcb0b5580979a8a782f0a97185f649a" }

[dependencies.rusqlite]
version = "0.10.1"
# System sqlite might be very old.
features = ["bundled", "limits"]