[package]
name = "neon-project"
version = "0.1.0"
authors = ["Brian Grinstead <briangrinstead@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "neon_project"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.14"

[dependencies]
neon = "0.1.14"
mentat = { git = "https://github.com/mozilla/mentat", rev = "e64ee5864eb4486b91d2ad8b51a2358dec5af700"}
mentat_db = { git = "https://github.com/mozilla/mentat", rev = "e64ee5864eb4486b91d2ad8b51a2358dec5af700" }
mentat_core = { git = "https://github.com/mozilla/mentat", rev = "e64ee5864eb4486b91d2ad8b51a2358dec5af700" }

[dependencies.rusqlite]
version = "0.10.1"
# System sqlite might be very old.
features = ["bundled", "limits"]