[package]
name = "neon-project"
version = "0.1.0"
authors = ["Brian Grinstead <briangrinstead@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "neon_project"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.14"

[dependencies]
chrono = "0.3"
neon = "0.1.14"
mentat = { git = "https://github.com/mozilla/mentat", rev = "1dc8a3e"}
mentat_db = { git = "https://github.com/mozilla/mentat", rev = "1dc8a3e" }
mentat_core = { git = "https://github.com/mozilla/mentat", rev = "1dc8a3e" }

[dependencies.rusqlite]
version = "0.11"
# System sqlite might be very old.
features = ["bundled", "limits"]